[gd_scene load_steps=8 format=3 uid="uid://7pl33ust4wmg"]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1_fbwkn"]
[ext_resource type="Material" uid="uid://d1awj08cv487x" path="res://shaders/background.tres" id="2_fne4h"]
[ext_resource type="Texture2D" uid="uid://dhe2mg2tai2xk" path="res://sprites/chess-background.png" id="3_yqum6"]
[ext_resource type="FontFile" uid="uid://plpnksgq5si2" path="res://fonts/m5x7.ttf" id="4_fb21x"]

[sub_resource type="Animation" id="Animation_06gf3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3xvat"]
resource_name = "slow_flash"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y35ey"]
_data = {
"RESET": SubResource("Animation_06gf3"),
"slow_flash": SubResource("Animation_3xvat")
}

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -160.0
offset_top = -160.0
offset_right = -160.0
offset_bottom = -160.0
script = ExtResource("1_fbwkn")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 2
material = ExtResource("2_fne4h")
layout_mode = 0
offset_right = 1280.0
offset_bottom = 768.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_yqum6")
stretch_mode = 1

[node name="HUD" type="CanvasLayer" parent="."]

[node name="GameInfo" type="RichTextLabel" parent="HUD"]
texture_filter = 1
offset_top = 160.0
offset_right = 192.0
offset_bottom = 192.0
theme_override_fonts/normal_font = ExtResource("4_fb21x")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/GameInfo"]
autoplay = "slow_flash"
libraries = {
"": SubResource("AnimationLibrary_y35ey")
}

[node name="Tutorial" type="RichTextLabel" parent="HUD"]
texture_filter = 1
offset_left = 8.0
offset_right = 184.0
offset_bottom = 72.0
theme_override_fonts/normal_font = ExtResource("4_fb21x")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
scroll_active = false

[node name="Curtain" type="Control" parent="HUD"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CurtainLeft" type="ColorRect" parent="HUD/Curtain"]
offset_left = 104.0
offset_right = 144.0
offset_bottom = 40.0
scale = Vector2(-2.60744, 4.79368)
color = Color(0.14902, 0.0470588, 0.101961, 1)

[node name="CurtainRight" type="ColorRect" parent="HUD/Curtain"]
offset_left = 192.0
offset_right = 232.0
offset_bottom = 40.0
scale = Vector2(-2.60744, 4.79368)
color = Color(0.14902, 0.0470588, 0.101961, 1)
